# cliparser

./: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
benches/: bench_parse.rs
docs/: index.html
docs/api/: crates.js  search-index.js  settings.html  source-files.js
docs/api/cliparser/: all.html  fn.help.html  fn.parse.html  fn.parse_any.html  fn.parse_process.html  fn.parse_process_any.html  fn.version.html  index.html  sidebar-items.js
docs/api/cliparser/types/: enum.ArgumentHelp.html  enum.ArgumentOccurrence.html  enum.ArgumentValueType.html  enum.Command.html  enum.ParserError.html  index.html  sidebar-items.js  struct.Argument.html  struct.CliParsed.html  struct.CliSpec.html  struct.CliSpecMetaInfo.html  struct.PositionalArgument.html
docs/api/implementors/core/clone/: trait.Clone.js
docs/api/implementors/core/cmp/: trait.PartialEq.js
docs/api/implementors/core/default/: trait.Default.js
docs/api/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/api/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/api/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/implementors/std/error/: trait.Error.js
docs/api/src/cliparser/: help.rs.html  lib.rs.html  parser.rs.html  types.rs.html
examples/: example.rs
src/: help.rs  help_test.rs  lib.rs  lib_test.rs  parser.rs  parser_test.rs  types.rs  types_test.rs
tests/: parse_any_test.rs  parse_test.rs
